2006-04-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.13 TAGGED FOR RELEASE ***

	* changes:	Updates for next RC.

2006-04-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: update for bug fix.

	* generic/tkBind.c (Tk_BindEvent, ChangeScreen): replace
	Tcl_GlobalEval with more efficient Tcl_EvalEx.

	* win/tkWinEmbed.c (TkpGetOtherWindow):   do not panic if no window
	* win/tkWinWm.c (UpdateGeometryInfo):     is found - handle it in
	* unix/tkUnixEmbed.c (TkpGetOtherWindow): the caller. [Bug 1212056]
	* unix/tkUnixWm.c (Tk_CoordsToWindow, UpdateGeometryInfo): 

2006-04-11  Daniel Steffen  <das@users.sourceforge.net>

	* changes: added latest aqua bug fixes.

	* macosx/tkMacOSXDialog.c (Tk_MessageBoxObjCmd): added standard Escape
	key binding for msgbox cancel buttons [Patch 1193614], whitespace.

	* macosx/tkMacOSXCarbonEvents.c: handle kEventCommandUpdateStatus
	* macosx/tkMacOSXEvent.c:        carbon event to dynamically enable
	the 'Preferences' app menu item when proc [::tk::mac::ShowPreferences]
	is defined. [Bug 700316]

	* macosx/tkMacOSXHLEvents.c:    call ::tk::mac::* procs for all
	* macosx/tkMacOSXWindowEvent.c: registered appleevents [FR 1105284],
	implement print applevent handling, style/whitespace cleanup. 

	* macosx/tkMacOSXDraw.c (TkMacOSXInitCGDrawing): prevent multiple init.

	* macosx/tkMacOSXInt.h:         Implemented 'zoomed' window state
	* macosx/tkMacOSXWindowEvent.c: handling for TkAqua, via titlebar
	* macosx/tkMacOSXWm.c:          widget clicks as well as [wm state].
	* doc/wm.n:                     [Bug 1073456]

2006-04-10  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for next RC.

2006-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (WmResizableCmd): propagate window attribute
	changes to Carbon window manager. [FR 1467004]
	(TkSetWMName, TkMacOSXMakeRealWindowExist): allow empty name for
	toplevels, remove bogus initial window name. [Bug 1450800]
