@@ -713,6 +713,57 @@ test grid-10.33 {column/row configure - invalid indices} {
     list [catch {grid rowconfigure . {0 1 2} -weight} msg] $msg
 } {1 {grid rowconfigure: must specify a single element on retrieval}}
 
+test grid-10.37 {column/row configure} {
+    list [catch {grid columnconfigure . 100000} msg] $msg
+} {0 {-minsize 0 -pad 0 -uniform {} -weight 0}}
+grid_reset 10.37
+
+test grid-10.38 {column/row configure} -body {
+    # This is a test for bug 1423666 where a column >= 10000 caused
+    # a crash in layout.  The update is needed to reach the layout stage.
+    # Test different combinations of row/column overflow
+    frame .f
+    set res {}
+    lappend res [catch {grid .f -row 10 -column 9999} msg] $msg ; update
+    lappend res [catch {grid .f -row 9999 -column 10} msg] $msg ; update
+    lappend res [catch {grid .f -columnspan 2 -column 9998} msg] $msg ; update
+    lappend res [catch {grid .f -rowspan 2 -row 9998} msg] $msg ; update
+    lappend res [catch {grid .f -column 9998 -columnspan 2} msg] $msg ; update
+    lappend res [catch {grid .f -row 9998 -rowspan 2} msg] $msg ; update
+    set res
+} -cleanup {destroy .f} -result [lrange {
+    1 {Column out of bounds}
+    1 {Row out of bounds}
+    1 {Column out of bounds}
+    1 {Row out of bounds}
+    1 {Column out of bounds}
+    1 {Row out of bounds}
+} 0 end]
+grid_reset 10.38
+
+test grid-10.39 {column/row configure} -body {
+    # Additional tests for row/column overflow
+    frame .f
+    frame .g
+    set res {}
+    grid .f -row 9998 -column 0
+    lappend res [catch {grid ^ .g} msg] $msg  ; update
+    grid forget .g
+    lappend res [catch {grid .g} msg] $msg  ; update
+    grid forget .f .g
+    lappend res [catch {grid .f - -column 9998} msg] $msg ; update
+    grid forget .f .g
+    lappend res [catch {eval grid [string repeat " x " 9999] .f} msg] $msg
+    update
+    set res
+} -cleanup {destroy .f .g} -result [lrange {
+    1 {Row out of bounds}
+    1 {Row out of bounds}
+    1 {Column out of bounds}
+    1 {Column out of bounds}
+} 0 end]
+grid_reset 10.39
+
 # auto-placement tests
 
 test grid-11.1 {default widget placement} {
